@@ -33,6 +33,8 @@ Additions:
 	- SetIsSwinging(bool)
 	- GetIsSpinAttack()
 	- SetIsSpinAttack(bool)
+* EntityFamiliar:
+	- GetItemConfig()
 * Enums:
 	- CambionFamiliarFlag
 * Added a new option "Extra debug render for FindInRadius". While the DebugFlag.HITSPHERES flag is enabled, debug spheres will be rendered for FindInRadius/QueryRadius calls.
